Prevent wrapping in collapsed comments

--- a/tildes/scss/modules/_comment.scss
+++ b/tildes/scss/modules/_comment.scss
@@ -204,6 +204,7 @@
   header {
     font-size: 0.6rem;
     line-height: 0.8rem;
+    white-space: nowrap;
   }
 
   .btn-comment-collapse-label::after {
